--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,16 +25,19 @@
 
 /* Player info in game screen */
 .player-info {
-  background: rgba(245, 245, 245, 0.7);
-  padding: 0.75rem 1.5rem;
-  border-radius: 10px;
-  display: inline-block;
+  background: linear-gradient(135deg, #c62828d7, #b71c1ce0);
+  padding: 1rem 1.5rem;
+  width: 350px;
+
+  border-radius: 16px;
+  position: relative;
   overflow: hidden;
-  width: 420px;
+  color: #fff;
 }
 
+
 .player-label {
-  color: #667eea;
+  color: whitesmoke;
   font-weight: 600;
   font-size: 0.9rem;
   text-transform: uppercase;
@@ -43,8 +46,8 @@
 }
 
 .player-name {
-  color: red;
-  font-size: 1.1rem;
+  color: whitesmoke;
+  font-size: 1.2rem;
   font-weight: 700;
 }
 
@@ -59,18 +62,17 @@
 
 /* Event area styling */
 .event-title {
-  color: red;
+  color: whitesmoke;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.5px;
 }
 
 .event-text {
-  color: red;
-  font-weight: 700;
+  color: whitesmoke;
+  font-weight: 600;
   font-size: 1.1rem;
   padding: 0.75rem 1.5rem;
-  background: linear-gradient(135deg, rgba(102, 126, 234, 0.05) 0%, rgba(118, 75, 162, 0.05) 100%);
   border-radius: 12px;
   display: inline-block;
   overflow: hidden;
@@ -557,7 +559,7 @@ END RUNNING REINDEER SPRITE OVERRIDES
   font-size: 0.6rem;
   font-weight: 700;
   letter-spacing: 1px;
-  color: red;
+  color: #667eea;
   padding: 10px;
   border-radius: 999px;
 }
@@ -566,14 +568,13 @@ END RUNNING REINDEER SPRITE OVERRIDES
   background: none;
   border:none;
   padding:0;
-  background: rgba(245, 245, 245, 0.7);
+  background: none;
 }
 
 .spin-btn-img {
   width: 90px;
   height: auto;
   cursor: pointer;
-
 }
 
 .spin-btn-img:hover {
@@ -698,7 +699,7 @@ END RUNNING REINDEER SPRITE OVERRIDES
   gap: 2rem;
   flex-wrap: wrap;
   padding: 1rem;
-  background: rgba(255, 255, 255, 0.9);
+  background: #667eea;
   border-radius: 16px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   max-width: 400px;
