--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -709,6 +709,7 @@ END RUNNING REINDEER SPRITE OVERRIDES
 
 .stat-item {
   display: flex;
+  color: black;
   flex-direction: column;
   align-items: center;
   gap: 0.25rem;
@@ -724,7 +725,7 @@ END RUNNING REINDEER SPRITE OVERRIDES
 
 .stat-value {
   font-size: 1.5rem;
-  color: whitesmoke;
+  color: black;
   font-weight: 700;
 }
 
